Name:                   imessage
Version:                0.0.0.1
Author:                 Mitch Tishmack <mitch.tishmack@gmail.com>
Maintainer:             Mitch Tishmack <mitch.tishmack@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Stupid imessage commandline interface
Description:            I got bored.
Cabal-Version:          >= 1.10
Build-Type:             Simple

executable imessage
  main-is:           Main.hs
  build-depends:     base >= 4.7 && <= 4.8
                   , optparse-applicative -any
                   , shell-conduit >= 2.0
                   , conduit -any
                   , imessage -any
  default-language:  Haskell2010
  ghc-options:       -O3 -fwarn-tabs -Wall

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Imessage
  Other-Modules:        Imessage.Internal
  Build-Depends:        base >= 4 && < 5

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
  Location:             https://github.com/mitchty/imessage
